Finished testing expensetracker service